# ai-helm

./: .gitignore  .gitlab-ci.yml  .trivyignore.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  MONITORING_FIX.md  README.md  SYNC_WAVE_PATTERN.md  index.html  index.yaml  lightbridge-authz-0.1.0.tgz  opencode.json
.github/: copilot-instructions.md
.opencode/: README.md  opencode.json  package-lock.json
docs/: 2026-06-07-observability-datasource-audit.md  2026-06-08-gpu-platform-procurement-comparison.md  2026-06-10-mcp-external-server-proxy-debug.md  2026-currency-audit.md  2026-hetzner-cutover.md  2026-linode-to-hetzner-cutover.md  2026-self-hosted-gpu-inference.md  CNPG-BACKUP-SETUP.md  README.md  alloy-servicemonitor-guide.md  arc42.md  architectural-shift-main-to-magical-bohr.md  architecture.md  authorino-service-account-bypass.md  bifrost_comprehensive_report.md  cnpg-backup-strategy-decision.md  cnpg-backup-strategy-implementation.md  coder-analysis.md  coder-pilot-report.md  coder-platform-integration.md  continuous-delivery.md  cost-observability.md  gateway-capacity.md  gemini-patch-removal-guide.md  grafana-operator-and-dashboards.md  jwt-token-observability.md  keycloak-audience-operations.md  keycloak-billing-provisioning-guide.md  keycloak-identity-datasource.md  librechat-chain-of-agents.md  librechat-oidc-experiments.md  librechat-oidc-integration.md  librechat-platform.md  (+21 more)
tools/: release.sh  (+1 more)
tools/dashboards/: Makefile  README.md  pyproject.toml
tools/dashboards/src/dashboards/: _common.py  main.py
tools/dashboards/src/dashboards/envoy_ai_gateway/: _shared.py  actor_consumption.py  cost_by_model.py  jwt_tokens.py  per_user.py  ratelimit_quota.py  scoreboard.py  sessions_grants.py  user_directory.py  user_tokens_cost.py
(+638 files in other folders)
